# lexia-rag-assistant

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml  template.py
app/backend/: main.py
app/frontend/: app.py  main.py
notebooks/: research.ipynb
scripts/: create_vectorstore.py  deploy.py
src/: config.py  embedder.py  loader.py  logger.py  retriever.py  splitter.py  vectorstore.py
